manifests/infrastructure/envoy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy-proxy
  labels:
    app: envoy-proxy
spec:
  type: ClusterIP
  selector:
    app: envoy-proxy
  ports:
    - name: grpc
      port: 10443
      targetPort: grpc
      protocol: TCP
